# arcadelauncher

./: CMakeLists.txt
data/: launcher.cfg
src/: main.cpp
src/config/: config.cpp  config.h
src/files/: configfile.cpp  configfile.h  file.cpp  file.h
src/gui/: coverflow.cpp  coverflow.h  main_menu.cpp  main_menu.h  selectiontheme.cpp  selectiontheme.h  staticgrid.cpp  staticgrid.h
src/input/: emulator.cpp  emulator.h  input.cpp  input.h  joystick.cpp  joystick.h  keyboard.cpp  keyboard.h
src/resources/: resources.cpp  resources.h
src/sdl/: image.cpp  image.h  renderable.cpp  renderable.h  sdl.cpp  sdl.h  text.cpp  text.h  window.cpp  window.h
src/utils/: color.cpp  color.h  gridtools.cpp  gridtools.h  ipaddress.cpp  ipaddress.h  point.cpp  point.h  stringtools.h  timer.cpp  timer.h
src/video/: videostreamer2.cpp  videostreamer2.h
src/widgets/: background.cpp  background.h  genericicon.cpp  genericicon.h  icon.cpp  icon.h  screeneffect.cpp  screeneffect.h  textbar.cpp  textbar.h  video.cpp  video.h  widget.cpp  widget.h
src/widgets/animations/: animation.cpp  animation.h  blink.cpp  blink.h  expand.cpp  expand.h  pulse.cpp  pulse.h  scale.cpp  scale.h  slide.cpp  slide.h
